# video-resources

./: .gitignore  README.md
2020-11-23-linear-money/: Linear.hs  Linear2.hs  Linear3.hs
2020-12-21-roles-abstraction/: Set.hs  Use.hs
2020-12-28-tcm-from-th/: CheckWarnings.hs
2021-01-04-kind-indexed-type-family/: PickType.hs
2021-02-22-closed-type-family-trick/: Records.hs
2021-03-08-newtypes/: Newtypes.hs
2021-04-20-vectors/: Vec.hs
2021-04-27-vectors/: Vec.hs
2021-05-04-vectors/: Vec.hs
2021-05-11-vectors/: Vec.hs
2021-05-18-vectors/: Vec.hs
2021-06-01-plugins/: Plugin.hs  Prelim.hs
2021-06-08-via/: Via.hs
2021-06-15-principal-type-inference/: Inference.hs
2021-06-22-coercible/: Coerce.hs
2021-07-06-zipWith/: ZipWith.hs  ZipWithNoNat.hs
2021-07-13-generalization/: Equal.hs  Flexible.hs
2021-07-20-kinds/: Kinds.hs
2021-07-27-kinds2/: Kinds.hs
2021-08-04-unboxed/: Unboxed.hs
2021-08-12-representations/: Unboxed.hs
2021-08-18-levity-polymorphism/: Unboxed.hs
2021-08-24-generalization/: Gen.hs
2021-09-08-instances/: Instances.hs
2021-09-14-patsyns1/: PatSyns.hs
2021-09-21-patsyns2/: PatSyns2.hs
2021-09-28-patsyns3/: PatSyns3.hs
2021-10-06-patsyns4/: FinSafe.hs  FinUnsafe.hs  LICENSE  Main.hs  NatSafe.hs  NatUnsafe.hs  SNatSafe.hs  SNatUnsafe.hs  VecSafe.hs  VecUnsafe.hs  patsyns4.cabal
2021-10-14-monolocalbinds/: GADT.hs  Mono.hs
2021-10-19-type-error/: TypeError.hs
2021-10-28-scopedtypevariables/: Examples.hs
2021-11-02-redundancy-warnings/: Redundant.hs
2021-11-11-deriving/: Deriving.hs
2021-11-16-neq/: Neq.hs
2021-11-23-strict/: Strict.hs
2021-12-01-monomorphism-uniform/: CHANGELOG.md  MR.hs  mr.cabal
2021-12-10-quick-look/: Trees.hs
2021-12-17-pattern-warnings/: Patterns.hs
2021-12-23-no-poly-kinds/: Mono.hs  Poly.hs
2021-12-28-tuple/: Tuple.hs  TupleSimpler.hs
2022-01-07-defaulting-levity/: Defaulting.hs
2022-01-14-loopy-instances/: GenericLoopy.hs  Loopy.hs
2022-01-21-deferred-type-errors/: Deferred.hs
2022-04-22-monomorphism-restriction-ordering/: MR.hs
2022-04-28-record-update/: RecordUpdate.hs
2022-05-09-impredicative-scientific/: Impred.hs
2022-05-24-hs-boot/: CHANGELOG.md  boot.cabal
2022-05-24-hs-boot/src/: A.hs  A.hs-boot  B.hs
2022-07-08-subsumption/: .gitignore  Subsumption.hs
2022-07-15-generics/: Generic.hs
2022-07-23-rebindable/: NoRebind.hs  Rebind.hs
2022-08-12-java/: .gitignore  Haskell.hs  Java.java
2022-wordle/: .gitignore  CHANGELOG.md  LICENSE  Main.hs  Wordle.hs  Words.hs  design.txt  wordle.cabal
(+2 files in other folders)
